--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import 'lisa/styles/reset.css';
 @import 'lisa/styles/transition.scss';
 @import 'lisa/styles/r.scss';
+@import 'lisa/styles/iconfont.css';
 @import 'iconfont.css';
 @import 'lisa/styles/base.scss';
 @import 'base.scss';
